src/phdl/grammar/Phdl2Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g 2012-01-02 15:28:40

/*
    Copyright (C) 2011  Brigham Young University

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, version 3.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

	package phdl.grammar;
	import java.util.Set;
	import java.util.TreeSet;
	import java.util.HashSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**
 * A grammar to lex and parse a PHDL source file.
 * 
 * @author Richard Black and Brad Riching
 * @version 0.1
 */
public class Phdl2Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SEMICOLON", "COLON", "COMMA", "PERIOD", "EQUALS", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LANGLE", "RANGLE", "AMPERSAND", "DBLQUOTE", "DESIGN", "DEVICE", "SUBDESIGN", "INST", "SUBINST", "GROUP", "THIS", "OF", "NET", "ATTR", "NEWATTR", "BEGIN", "END", "COMBINE", "INCLUDE", "PIN", "INPIN", "OUTPIN", "IOPIN", "PWRPIN", "SUPPIN", "WIDTH_DECL", "DEVICE_DECL", "ATTR_DECL", "PIN_DECL", "PIN_LIST", "PIN_TYPE", "IDENT", "STRING", "INT", "PINNUM", "D", "E", "S", "I", "G", "N", "V", "C", "U", "B", "T", "R", "O", "P", "H", "F", "A", "W", "M", "L", "CHAR", "DIGIT", "WHITESPACE", "LINE_COMMENT", "MULTILINE_COMMENT", "INCLUDE_DECL", "J", "K", "Q", "X", "Y", "Z"
    };
    public static final int EOF=-1;
    public static final int SEMICOLON=4;
    public static final int COLON=5;
    public static final int COMMA=6;
    public static final int PERIOD=7;
    public static final int EQUALS=8;
    public static final int LPAREN=9;
    public static final int RPAREN=10;
    public static final int LBRACKET=11;
    public static final int RBRACKET=12;
    public static final int LBRACE=13;
    public static final int RBRACE=14;
    public static final int LANGLE=15;
    public static final int RANGLE=16;
    public static final int AMPERSAND=17;
    public static final int DBLQUOTE=18;
    public static final int DESIGN=19;
    public static final int DEVICE=20;
    public static final int SUBDESIGN=21;
    public static final int INST=22;
    public static final int SUBINST=23;
    public static final int GROUP=24;
    public static final int THIS=25;
    public static final int OF=26;
    public static final int NET=27;
    public static final int ATTR=28;
    public static final int NEWATTR=29;
    public static final int BEGIN=30;
    public static final int END=31;
    public static final int COMBINE=32;
    public static final int INCLUDE=33;
    public static final int PIN=34;
    public static final int INPIN=35;
    public static final int OUTPIN=36;
    public static final int IOPIN=37;
    public static final int PWRPIN=38;
    public static final int SUPPIN=39;
    public static final int WIDTH_DECL=40;
    public static final int DEVICE_DECL=41;
    public static final int ATTR_DECL=42;
    public static final int PIN_DECL=43;
    public static final int PIN_LIST=44;
    public static final int PIN_TYPE=45;
    public static final int IDENT=46;
    public static final int STRING=47;
    public static final int INT=48;
    public static final int PINNUM=49;
    public static final int D=50;
    public static final int E=51;
    public static final int S=52;
    public static final int I=53;
    public static final int G=54;
    public static final int N=55;
    public static final int V=56;
    public static final int C=57;
    public static final int U=58;
    public static final int B=59;
    public static final int T=60;
    public static final int R=61;
    public static final int O=62;
    public static final int P=63;
    public static final int H=64;
    public static final int F=65;
    public static final int A=66;
    public static final int W=67;
    public static final int M=68;
    public static final int L=69;
    public static final int CHAR=70;
    public static final int DIGIT=71;
    public static final int WHITESPACE=72;
    public static final int LINE_COMMENT=73;
    public static final int MULTILINE_COMMENT=74;
    public static final int INCLUDE_DECL=75;
    public static final int J=76;
    public static final int K=77;
    public static final int Q=78;
    public static final int X=79;
    public static final int Y=80;
    public static final int Z=81;

    // delegates
    // delegators


        public Phdl2Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Phdl2Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Phdl2Parser.tokenNames; }
    public String getGrammarFileName() { return "C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g"; }



    	/**
    	 * The list of errors retrived after parsing to report
    	 */
    	private List<String> errors = new ArrayList<String>();

    	/**
    	 * Overriding this method allows the parser to bail out on the first unexpected token.  The unexpected token
    	 * is reported in the usual format.
    	 */
    	@Override
    	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
    		String hdr = getErrorHeader(e);
    		String msg = getErrorMessage(e, tokenNames);
    		errors.add(hdr + " unexpected token: " + e.token.getText());
    	}

    	/**
    	 * Accessor method for retrieving the accumulated errors if they exist.
    	 */
    	public List<String> getErrors() {
    		return errors;
    	}


    public static class sourceText_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sourceText"
    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:217:1: sourceText : ( deviceDecl )+ ;
    public final Phdl2Parser.sourceText_return sourceText() throws RecognitionException {
        Phdl2Parser.sourceText_return retval = new Phdl2Parser.sourceText_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Phdl2Parser.deviceDecl_return deviceDecl1 = null;



        try {
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:218:2: ( ( deviceDecl )+ )
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:218:4: ( deviceDecl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:218:4: ( deviceDecl )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DEVICE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:218:5: deviceDecl
            	    {
            	    pushFollow(FOLLOW_deviceDecl_in_sourceText337);
            	    deviceDecl1=deviceDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, deviceDecl1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sourceText"

    public static class deviceDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "deviceDecl"
    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:221:1: deviceDecl : DEVICE IDENT LBRACE ( attrDecl | pinDecl )* RBRACE -> ^( DEVICE_DECL IDENT ( attrDecl )* ( pinDecl )* ) ;
    public final Phdl2Parser.deviceDecl_return deviceDecl() throws RecognitionException {
        Phdl2Parser.deviceDecl_return retval = new Phdl2Parser.deviceDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token DEVICE2=null;
        Token IDENT3=null;
        Token LBRACE4=null;
        Token RBRACE7=null;
        Phdl2Parser.attrDecl_return attrDecl5 = null;

        Phdl2Parser.pinDecl_return pinDecl6 = null;


        CommonTree DEVICE2_tree=null;
        CommonTree IDENT3_tree=null;
        CommonTree LBRACE4_tree=null;
        CommonTree RBRACE7_tree=null;
        RewriteRuleTokenStream stream_DEVICE=new RewriteRuleTokenStream(adaptor,"token DEVICE");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_pinDecl=new RewriteRuleSubtreeStream(adaptor,"rule pinDecl");
        RewriteRuleSubtreeStream stream_attrDecl=new RewriteRuleSubtreeStream(adaptor,"rule attrDecl");
        try {
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:2: ( DEVICE IDENT LBRACE ( attrDecl | pinDecl )* RBRACE -> ^( DEVICE_DECL IDENT ( attrDecl )* ( pinDecl )* ) )
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:4: DEVICE IDENT LBRACE ( attrDecl | pinDecl )* RBRACE
            {
            DEVICE2=(Token)match(input,DEVICE,FOLLOW_DEVICE_in_deviceDecl350); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_DEVICE.add(DEVICE2);

            IDENT3=(Token)match(input,IDENT,FOLLOW_IDENT_in_deviceDecl352); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENT.add(IDENT3);

            LBRACE4=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_deviceDecl354); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LBRACE.add(LBRACE4);

            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:24: ( attrDecl | pinDecl )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ATTR) ) {
                    alt2=1;
                }
                else if ( ((LA2_0>=PIN && LA2_0<=SUPPIN)) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:25: attrDecl
            	    {
            	    pushFollow(FOLLOW_attrDecl_in_deviceDecl357);
            	    attrDecl5=attrDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_attrDecl.add(attrDecl5.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:36: pinDecl
            	    {
            	    pushFollow(FOLLOW_pinDecl_in_deviceDecl361);
            	    pinDecl6=pinDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_pinDecl.add(pinDecl6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            RBRACE7=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_deviceDecl365); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RBRACE.add(RBRACE7);



            // AST REWRITE
            // elements: pinDecl, IDENT, attrDecl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 222:53: -> ^( DEVICE_DECL IDENT ( attrDecl )* ( pinDecl )* )
            {
                // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:56: ^( DEVICE_DECL IDENT ( attrDecl )* ( pinDecl )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DEVICE_DECL, "DEVICE_DECL"), root_1);

                adaptor.addChild(root_1, stream_IDENT.nextNode());
                // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:76: ( attrDecl )*
                while ( stream_attrDecl.hasNext() ) {
                    adaptor.addChild(root_1, stream_attrDecl.nextTree());

                }
                stream_attrDecl.reset();
                // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:222:86: ( pinDecl )*
                while ( stream_pinDecl.hasNext() ) {
                    adaptor.addChild(root_1, stream_pinDecl.nextTree());

                }
                stream_pinDecl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "deviceDecl"

    public static class attrDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attrDecl"
    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:225:1: attrDecl : ATTR IDENT EQUALS STRING SEMICOLON -> ^( ATTR_DECL IDENT STRING ) ;
    public final Phdl2Parser.attrDecl_return attrDecl() throws RecognitionException {
        Phdl2Parser.attrDecl_return retval = new Phdl2Parser.attrDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ATTR8=null;
        Token IDENT9=null;
        Token EQUALS10=null;
        Token STRING11=null;
        Token SEMICOLON12=null;

        CommonTree ATTR8_tree=null;
        CommonTree IDENT9_tree=null;
        CommonTree EQUALS10_tree=null;
        CommonTree STRING11_tree=null;
        CommonTree SEMICOLON12_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_EQUALS=new RewriteRuleTokenStream(adaptor,"token EQUALS");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_ATTR=new RewriteRuleTokenStream(adaptor,"token ATTR");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

        try {
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:226:2: ( ATTR IDENT EQUALS STRING SEMICOLON -> ^( ATTR_DECL IDENT STRING ) )
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:226:4: ATTR IDENT EQUALS STRING SEMICOLON
            {
            ATTR8=(Token)match(input,ATTR,FOLLOW_ATTR_in_attrDecl391); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ATTR.add(ATTR8);

            IDENT9=(Token)match(input,IDENT,FOLLOW_IDENT_in_attrDecl393); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENT.add(IDENT9);

            EQUALS10=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_attrDecl395); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EQUALS.add(EQUALS10);

            STRING11=(Token)match(input,STRING,FOLLOW_STRING_in_attrDecl397); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_STRING.add(STRING11);

            SEMICOLON12=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_attrDecl399); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SEMICOLON.add(SEMICOLON12);



            // AST REWRITE
            // elements: IDENT, STRING
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 226:39: -> ^( ATTR_DECL IDENT STRING )
            {
                // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:226:42: ^( ATTR_DECL IDENT STRING )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ATTR_DECL, "ATTR_DECL"), root_1);

                adaptor.addChild(root_1, stream_IDENT.nextNode());
                adaptor.addChild(root_1, stream_STRING.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attrDecl"

    public static class pinDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pinDecl"
    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:229:1: pinDecl : pinType ( widthDecl )? IDENT EQUALS pinList SEMICOLON -> ^( PIN_DECL IDENT pinType ( widthDecl )? pinList ) ;
    public final Phdl2Parser.pinDecl_return pinDecl() throws RecognitionException {
        Phdl2Parser.pinDecl_return retval = new Phdl2Parser.pinDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT15=null;
        Token EQUALS16=null;
        Token SEMICOLON18=null;
        Phdl2Parser.pinType_return pinType13 = null;

        Phdl2Parser.widthDecl_return widthDecl14 = null;

        Phdl2Parser.pinList_return pinList17 = null;


        CommonTree IDENT15_tree=null;
        CommonTree EQUALS16_tree=null;
        CommonTree SEMICOLON18_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_EQUALS=new RewriteRuleTokenStream(adaptor,"token EQUALS");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleSubtreeStream stream_pinList=new RewriteRuleSubtreeStream(adaptor,"rule pinList");
        RewriteRuleSubtreeStream stream_pinType=new RewriteRuleSubtreeStream(adaptor,"rule pinType");
        RewriteRuleSubtreeStream stream_widthDecl=new RewriteRuleSubtreeStream(adaptor,"rule widthDecl");
        try {
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:230:2: ( pinType ( widthDecl )? IDENT EQUALS pinList SEMICOLON -> ^( PIN_DECL IDENT pinType ( widthDecl )? pinList ) )
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:230:4: pinType ( widthDecl )? IDENT EQUALS pinList SEMICOLON
            {
            pushFollow(FOLLOW_pinType_in_pinDecl420);
            pinType13=pinType();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_pinType.add(pinType13.getTree());
            // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:230:12: ( widthDecl )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LBRACKET) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\work\\phdl\\src\\phdl\\grammar\\Phdl2.g:0:0: widthDecl
                    {
                    pushFollow(FOLLOW_widthDecl_in_pinDecl422);
                    widthDecl14=widthDecl();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_widthDecl.add(widthDecl14.getTree());

                    }
                    break;

            }

            IDENT15=(Token)match(input,IDENT,FOLLOW_IDENT_in_pinDecl425); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENT.add(IDENT15);

            EQUALS16=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_pinDecl427); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EQUALS.add(EQUALS16);

            pushFollow(FOLLOW_pinList_in_pinDecl429);
            pinList17=pinList();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_pinList.add(pinList17.getTree());
            SEMICOLON18=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_pinDecl431); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SEMICOLON.add(SEMICOLON18);



            // AST REWRITE
            // elements: IDENT, widthDecl, pinList, pinType
            // token labels: 
            // rule labels: retval
